[form-builder] Block editor: fix decorator horiz. padding that is confusing in regard to whitespace

--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Decorator.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/Decorator.css
@@ -26,5 +26,5 @@
   font-family: monospace;
   background-color: #eee;
   color: #333;
-  padding: 0.1em 0.3em;
+  padding: 0.1em 0em;
 }
